--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@
                         <div class="ttcont" id="adaptiveIconField">
                             <div class="texts">
                                 <div class="bigText" id="adaptiveIconText">Adaptive Icon Shapes</div>
-                                <div class="infoText" id="adaptiveIconInfoText">Shortcut icons will appear round
+                                <div class="infoText" id="adaptiveIconInfoText">Shortcut icons will appear smaller
                                 </div>
                             </div>
                             <label class="switch">
