--- a/index.html
+++ b/index.html
@@ -653,6 +653,7 @@
                             <option value="zh">中文 (Simplified Chinese)</option>
                             <option value="cs">Čeština (Czech)</option>
                             <option value="hi">हिन्दी (Hindi)</option>
+                            <option value="idn">Bahasa Indonesia (Indonesian)</option>
                             <option value="it">Italiano (Italian)</option>
                             <option value="ja">日本語 (Japanese)</option>
                             <option value="ko">한국어 (Korean)</option>
