--- a/index.html
+++ b/index.html
@@ -1096,11 +1096,15 @@
                             <input class="colorPlate" name="color" type="radio" value="pink">
                             <input class="colorPlate" name="color" type="radio" value="purple">
                             <input class="colorPlate" name="color" type="radio" value="orange">
-                            <input class="colorPlate" name="color" type="radio" value="grey">
-                            <input class="colorPlate" id="darkTheme" name="color" type="radio" value="dark">
+                            <input class="colorPlate" name="color" type="radio" value="brown">
+                            <input class="colorPlate" name="color" type="radio" value="silver">
 
                             <!-- -------- -->
-                            <input class="colorPlate" name="color" type="radio" value="brown">
+                            <input class="colorPlate" name="color" type="radio" value="grey">
+
+
+                             
+                            <input class="colorPlate" id="darkTheme" name="color" type="radio" value="dark">
 
                         </div>
 
